--- a/themes/inhabitent-theme/sass/layout/_widgets.scss
+++ b/themes/inhabitent-theme/sass/layout/_widgets.scss
@@ -18,4 +18,36 @@
 .widget-area {
 	width: 27%;
 	padding-left: 5%;
+	h2 {
+		color: #2f1339;
+	}
+	a {
+		color: $color__link;
+		&:hover {
+			color: $color__link-hover;
+		}
+		&:visited {
+			color: $color__link;
+			&:hover {
+				color: $color__link-hover;
+			}
+		}
+	}
+}
+.textwidget {
+	p {
+		display: flex;
+	}
+	i {
+		margin-right: 10px;
+		line-height: 1.8rem;
+		width: 20px;
+	}
+}
+.widget_archive {
+	ul {
+		padding-left: 0;
+		margin-left: 0;
+		list-style: none;
+	}
 }
