--- a/themes/inhabitent-theme/sass/pages/_journal-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_journal-page.scss
@@ -7,7 +7,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 1120px;
-    margin: 0;
+    margin-top: 0;
     padding-top: 60px;
 }
 .content-area {
@@ -16,7 +16,6 @@
     padding-top: 3rem;
     padding-bottom: 3rem;
     width: 73%;
-    margin-left: 150px;
 }
 .entry-header {
   position: relative;
@@ -50,6 +49,13 @@ img {
   padding: 2.5px 20px;
   font-size: 0.9rem;
 }
+.entry-meta {
+  a {
+   &:hover {
+     color: #f0e4d1;
+   }
+  }
+}
 .moretag {
   border: 1px solid black;
   padding: 12.5px 25px;
@@ -58,9 +64,9 @@ img {
   color: black;
   font-size: 0.9rem;
   &:hover {
-    background-color: $color__link-hover;
+    background-color: $color__link;
     color: white;
-    border: 1px solid $color__link-hover;
+    border: 1px solid $color__link;
   }
   &:visited {
     color: black;
@@ -77,13 +83,15 @@ img {
   margin-bottom:80px;
   span {
     line-height: 1.5;
+    letter-spacing: .5px;
+    font-size: 1rem;
   }
 }
 .cat-links, .tags-links {
   text-transform: uppercase;
   font-family: $font__pre;
   a {
-    color: $color__link-hover;
+    color: $color__link;
     &:hover {
       color: #2f1339;
     }
