--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -1088,3 +1088,31 @@ img {
   background: transparent;
   padding: 5px 30px;
   margin-top: 30px; }
+
+.content-area {
+  padding-top: 0; }
+
+.status-publish h1 {
+  font-size: 2.5rem; }
+
+.status-publish h2 {
+  color: #2f1339;
+  font-size: 2rem; }
+
+.wpcf7-form label {
+  text-transform: uppercase;
+  font-family: Novovento Sans Web, sans-serif;
+  font-size: 1.1rem;
+  font-weight: normal; }
+
+.wpcf7-form .required {
+  color: #d99054;
+  font-size: 1.1rem; }
+
+.wpcf7-form .ajax-loader {
+  height: 20px;
+  width: 20px; }
+
+.wpcf7-form .wpcf7-submit {
+  font-size: .9rem;
+  padding: 8px 22.5px; }
