fixed latest adventures on front page with floats and added sticky header js for testing later and embedded google maps on find us page

--- a/themes/inhabitent-theme/sass/layout/_header.scss
+++ b/themes/inhabitent-theme/sass/layout/_header.scss
@@ -6,7 +6,7 @@
   text-shadow: 1px 1px 2px #323232;
   display: flex;
   justify-content: space-around;
-  padding: 0 0 0 30px;
+  padding: 0 0 0 150px;
 
   a {
     color: white;
@@ -38,6 +38,7 @@
   margin: 0;
   position: absolute;
   top: 10px;
+  left: 150px;
 }
 .main-navigation a {
   color: white;
