--- a/themes/inhabitent-theme/sass/pages/_front-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_front-page.scss
@@ -16,7 +16,7 @@
 // Latest Adventures
 
 .adventures {
-  margin-bottom: 60px;
+  margin-bottom: 70px;
   h2 {
     text-align: center;
     font-size: 2.5rem;
@@ -34,32 +34,36 @@
       }
     }
   }
+  p {
+    padding-top: 40px;
+  }
   a {
     text-decoration: none;
   }
   ul {
   list-style: none;
-  display: flex;
-  flex-wrap: wrap;
+  display: inline;
   padding-left: 0;
   margin-left: 0;
   li {
     &:first-child {
-      margin-right: 1%;
-      flex: 0 1 49%;
+      width: 49%;
+      float: left;
     }
     &:nth-child(2) {
-      flex: 0 1 49%;
+      width: 49%;
+      float:right;
     }
     &:nth-child(3) {
-      flex: 0 1 24%;
-      // margin-left: 2%;
-      margin-top: 0.5%;
+      width: 24%;
+      float: right;
+      margin-left: 1%;
+      margin-top: 1.75%;
     }
     &:last-child {
-      flex: 0 1 24%;
-      margin-left: 1%;
-      margin-top: 0.5%;
+      width: 24%;
+      float: right;
+      margin-top: 1.75%;
     }
   }
   }
@@ -72,7 +76,7 @@
   ),
   url(../../images/adventure/canoe-girl.jpg) no-repeat center center;
   background-size: cover, cover;
-  height: 600px;
+  height: 620px;
 }
 .bonfire {
   background:
