--- a/themes/inhabitent-theme/sass/abstracts/_variables.scss
+++ b/themes/inhabitent-theme/sass/abstracts/_variables.scss
@@ -16,7 +16,7 @@ $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
 
 $color__link: #248a83;
-$color__link-visited: purple;
+$color__link-visited: #2f1339;
 $color__link-hover: #19625d;
 
 // Typography
