--- a/themes/inhabitent-theme/sass/style.scss
+++ b/themes/inhabitent-theme/sass/style.scss
@@ -73,3 +73,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "pages/journal-page";
 @import "pages/about-page";
 @import "pages/findus-page";
+@import "pages/error-page";
