--- a/themes/inhabitent-theme/sass/pages/_about-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_about-page.scss
@@ -1,1 +1,25 @@
-
+.about-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  h1 {
+    color: white;
+    font-size: 3rem;
+  }
+}
+.about-container {
+  max-width: 1120px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 30px;
+  .about-paragraphs {
+    max-width: 800px;
+    margin: 3rem auto;
+  }
+  .about-title {
+    text-align: center;
+    font-size: 2rem;
+    color: $color__link-visited;
+  }
+}
