--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -1153,6 +1153,31 @@ img {
   padding: 5px 30px;
   margin-top: 30px; }
 
+.about-header {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  height: 100vh; }
+  .about-header h1 {
+    color: white;
+    font-size: 3rem; }
+
+.about-container {
+  max-width: 1120px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 30px; }
+  .about-container .about-paragraphs {
+    max-width: 800px;
+    margin: 3rem auto; }
+  .about-container .about-title {
+    text-align: center;
+    font-size: 2rem;
+    color: #2f1339; }
+
 .status-publish h1 {
   font-size: 2.5rem; }
 
