--- a/themes/inhabitent-theme/sass/pages/_front-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_front-page.scss
@@ -6,6 +6,7 @@
     text-align: center;
     font-size: 2.5rem;
     font-weight: normal;
+    padding: 30px 0;
   }
 }
 .home .home-hero {
@@ -191,7 +192,7 @@
   }
 }
 
-.more-adventures {
+.button {
   padding: 12.5px 25px;
   font-family: $font__pre;
   text-transform: uppercase;
