--- a/themes/inhabitent-theme/sass/pages/_shop-page.scss
+++ b/themes/inhabitent-theme/sass/pages/_shop-page.scss
@@ -32,7 +32,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
+  padding-top: 30px;
   .product-grid-item {
     max-width: 23%;
     flex: 0 1 23%;
