--- a/themes/inhabitent-theme/sass/base/_fonts.scss
+++ b/themes/inhabitent-theme/sass/base/_fonts.scss
@@ -28,3 +28,23 @@
     font-style: normal;
 
 }
+@font-face {
+    font-family: 'Novovento Sans Web';
+    src: url('../../fonts/novocento/novocentosanswide-normal-webfont.woff2') format('woff2'),
+    url('../../fonts/novocento/novocentosanswide-normal-webfont.woff') format('woff'),
+    url('../../fonts/novocento/novocentosanswide-normal-webfont.svg') format('svg'),
+    url('../../fonts/novocento/novocentosanswide-normal-webfont.ttf') format('ttf')url('../../fonts/novocento/novocentosanswide-normal-webfont.eot') format('eot'),;
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'Novovento Sans Web';
+    src: url('../../fonts/novocento/novocentosanswide-demibold-webfont.woff2') format('woff2'),
+    url('../../fonts/novocento/novocentosanswide-demibold-webfont.woff') format('woff'),
+    url('../../fonts/novocento/novocentosanswide-demibold-webfont.svg') format('svg'),
+    url('../../fonts/novocento/novocentosanswide-demibold-webfont.ttf') format('ttf')url('../../fonts/novocento/novocentosanswide-demibold-webfont.eot') format('eot'),;
+    font-weight: normal;
+    font-style: normal;
+
+}
