--- a/themes/inhabitent-theme/sass/style.scss
+++ b/themes/inhabitent-theme/sass/style.scss
@@ -74,3 +74,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "pages/about-page";
 @import "pages/findus-page";
 @import "pages/error-page";
+@import "pages/adventure-page";
