--- a/themes/inhabitent-theme/sass/style.scss
+++ b/themes/inhabitent-theme/sass/style.scss
@@ -75,3 +75,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "pages/findus-page";
 @import "pages/error-page";
 @import "pages/adventure-page";
+@import "pages/search-page";
